<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- ── Авторизация ── -->

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.myapplication.ui.auth.LoginFragment"
        android:label="Вход"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_apartments"
            app:destination="@id/apartmentListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.myapplication.ui.auth.RegisterFragment"
        android:label="Регистрация"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_apartments"
            app:destination="@id/apartmentListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- ── Основные экраны (BottomNav) ── -->

    <fragment
        android:id="@+id/apartmentListFragment"
        android:name="com.example.myapplication.ui.apartments.ApartmentListFragment"
        android:label="@string/nav_apartments"
        tools:layout="@layout/fragment_apartment_list">

        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/apartmentDetailFragment" />

        <action
            android:id="@+id/action_list_to_create"
            app:destination="@id/createApartmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/apartmentDetailFragment"
        android:name="com.example.myapplication.ui.apartments.ApartmentDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_apartment_detail">

        <argument
            android:name="apartmentId"
            app:argType="string" />

        <action
            android:id="@+id/action_detail_to_edit"
            app:destination="@id/createApartmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/createApartmentFragment"
        android:name="com.example.myapplication.ui.apartments.CreateApartmentFragment"
        android:label="@string/create_apartment_title"
        tools:layout="@layout/fragment_create_apartment">

        <argument
            android:name="apartmentId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.example.myapplication.ui.analytics.AnalyticsFragment"
        android:label="@string/nav_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
